--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,14 +9,14 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-            <a class="navbar-brand" href="{{path('aliments')}}">Aliments</a>
+            <a class="navbar-brand" href="{{path('aliments')}}">Recette.com</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>     
             <div class="collapse navbar-collapse" id="navbarColor01">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="{{path('aliments')}}">Aliments <span class="sr-only">(current)</span></a>
                 </li>
           </nav>
         <h1 class="mx-2">{% block monTitre %}{% endblock %}</h1>
