Mise en place de l'upload d'image pour l'ajout ou la modification d'aliments

--- a/templates/admin/admin_aliment/adminAliments.html.twig
+++ b/templates/admin/admin_aliment/adminAliments.html.twig
@@ -23,7 +23,7 @@
           </tr>
           {% for aliment in aliments %}
           <tr>
-            <td><img src="{{ asset('images/' ~ aliment.image) }}" style="height: 50px; width:auto;"></td>
+            <td><img src="{{ asset('images/aliments/' ~ aliment.image) }}" style="height: 50px; width:auto;"></td>
             <td>{{aliment.nom}}</td>
             <td>{{aliment.prix}}</td>
             <td>{{aliment.calorie}}</td>
