--- a/templates/aliment/aliments.html.twig
+++ b/templates/aliment/aliments.html.twig
@@ -17,7 +17,7 @@
         {% for aliment in aliments %}
             <div class="col-12 col-md-6 col-lg-4 col-xl-3">
                 <div class="card border-primary mb-3 mx-auto" style="max-width: 20rem;">
-                    <div class="card-header text-center"><img src="{{ asset('images/' ~ aliment.image) }}"  class="card-img-top imageAliments"></div>
+                    <div class="card-header text-center"><img src="{{ asset('images/aliments/' ~ aliment.image) }}"  class="card-img-top imageAliments"></div>
                     <div class="card-body">
                         <h4 class="card-title text-center border-bottom pb-2 mx-3 border-primary">{{aliment.nom}}</h4>
                         <p class="card-text">
