--- a/templates/admin/admin_aliment/modifEtAjoutAliment.html.twig
+++ b/templates/admin/admin_aliment/modifEtAjoutAliment.html.twig
@@ -24,6 +24,7 @@ form_widget pour afficher le formulaire (de base), et form_end pour le fermer --
   3- on peut modifier aussi les info liées au label en rajoutant "label":"..." -->
             <div>{{form_row(form.imageFile)}}</div>
             <div>{{ form_row(form.nom, {"attr":{'class':'text-danger'}, "label":"Nom de l'aliment"}) }}</div>
+            <div>{{ form_row(form.type) }}</div>
         </div>
         <div class="col-6">
             {{form_widget(form)}}
