--- a/templates/aliment/aliments.html.twig
+++ b/templates/aliment/aliments.html.twig
@@ -22,6 +22,7 @@
                         <h4 class="card-title text-center border-bottom pb-2 mx-3 border-primary">{{aliment.nom}}</h4>
                         <p class="card-text">
                             <h4 class="text-center">Prix (kilo): {{aliment.prix}} $</h4>
+                            <h4 class="text-center bg-info">Type: {{aliment.type.libelle}}</h4>
                             <table class="table text-center table-bordered border">
                                 <tr class="table-primary ">
                                     <td>Propriété</td>
