--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,19 +10,23 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
             <a class="navbar-brand" href="{{path('aliments')}}">Recette.com</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>     
             <div class="collapse navbar-collapse" id="navbarColor01">
               <ul class="navbar-nav mr-auto">
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Aliments</a>
-                  <div class="dropdown-menu">
-                    <a class="dropdown-item" href="{{path('aliments')}}">Aliments</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="{{path('admin_admin_aliments')}}">Administration</a>
-                  </div>
-                </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Aliments</a>
+                      <div class="dropdown-menu">
+                          <a class="dropdown-item" href="{{path('aliments')}}">Aliments</a>
+                          <a class="dropdown-item" href="{{path('admin_admin_aliments')}}">Administration</a>
+                      </div>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Types</a>
+                      <div class="dropdown-menu">
+                          <a class="dropdown-item" href="{{path('types')}}">Types</a>
+                          <a class="dropdown-item" href="{{path('admin_admin_aliments')}}">Administration</a>
+                      </div>
+                  </li>
+              </ul>
           </nav>
         <h1 class="mx-2">{% block monTitre %}{% endblock %}</h1>
         {% block body %}{% endblock %}
