--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,14 +16,14 @@
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Aliments</a>
                       <div class="dropdown-menu">
                           <a class="dropdown-item" href="{{path('aliments')}}">Aliments</a>
-                          <a class="dropdown-item" href="{{path('admin_admin_aliments')}}">Administration</a>
+                          <a class="dropdown-item" href="{{path('admin_admin_aliments')}}">Administration aliments</a>
                       </div>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Types</a>
                       <div class="dropdown-menu">
                           <a class="dropdown-item" href="{{path('types')}}">Types</a>
-                          <a class="dropdown-item" href="{{path('admin_admin_aliments')}}">Administration</a>
+                          <a class="dropdown-item" href="{{path('admin_admin_types')}}">Administration type d'aliments</a>
                       </div>
                   </li>
               </ul>
