--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,16 +16,32 @@
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Aliments</a>
                       <div class="dropdown-menu">
                           <a class="dropdown-item" href="{{path('aliments')}}">Aliments</a>
-                          <a class="dropdown-item" href="{{path('admin_admin_aliments')}}">Administration aliments</a>
-                      </div>
+                          {% if app.user %}
+                            <a class="dropdown-item" href="{{path('admin_admin_aliments')}}">Administration aliments</a>
+                          {% endif %}
+                        </div>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Types</a>
                       <div class="dropdown-menu">
                           <a class="dropdown-item" href="{{path('types')}}">Types</a>
-                          <a class="dropdown-item" href="{{path('admin_admin_types')}}">Administration type d'aliments</a>
-                      </div>
+                          {% if app.user %}
+                            <a class="dropdown-item" href="{{path('admin_admin_types')}}">Administration type d'aliments</a>
+                          {% endif %}
+                        </div>
                   </li>
+                  {% if not app.user %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{path('inscription')}}">Inscription</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{path('connexion')}}">Connexion</a>
+                    </li>
+                  {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{path('deconnexion')}}">Deconnexion</a>
+                    </li>
+                  {% endif %}
               </ul>
           </nav>
         <h1 class="mx-2">{% block monTitre %}{% endblock %}</h1>
