--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,7 +17,7 @@
                       <div class="dropdown-menu">
                           <a class="dropdown-item" href="{{path('aliments')}}">Aliments</a>
                           {% if app.user %}
-                            <a class="dropdown-item" href="{{path('admin_admin_aliments')}}">Administration aliments</a>
+                            <a class="dropdown-item" href="{{path('admin_aliments')}}">Administration aliments</a>
                           {% endif %}
                         </div>
                   </li>
@@ -26,21 +26,21 @@
                       <div class="dropdown-menu">
                           <a class="dropdown-item" href="{{path('types')}}">Types</a>
                           {% if app.user %}
-                            <a class="dropdown-item" href="{{path('admin_admin_types')}}">Administration type d'aliments</a>
+                            <a class="dropdown-item" href="{{path('adminTypes')}}">Administration type d'aliments</a>
                           {% endif %}
                         </div>
                   </li>
                   {% if not app.user %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{path('inscription')}}">Inscription</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{path('connexion')}}">Connexion</a>
-                    </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="{{path('inscription')}}">Inscription</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="{{path('connexion')}}">Connexion</a>
+                  </li>
                   {% else %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{path('deconnexion')}}">Deconnexion</a>
-                    </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="{{path('deconnexion')}}">Deconnexion</a>
+                  </li>
                   {% endif %}
               </ul>
           </nav>
