--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,6 @@
 .imageAliments{
-    max-height: 120px;
-    width: auto;
+    max-height: 250px;
+    width: 100%;
     object-fit: cover;
+    padding: 10px;
 }
